# CirclesArea

./: .gitignore  042216724.txt  README.md
CirclesArea/: CMakeLists.txt  cmdline.h  main.cpp  parser.cpp  parser.h  solver.cpp  solver.h  types.h
CirclesArea/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
CirclesFigureArea/: CMakeLists.txt  main.cpp  randomizer.cpp  randomizer.h  solver.cpp  solver.h
CirclesFigureArea/nbproject/: Makefile-Release.mk  Package-Debug.bash
CirclesFigureArea/tests/: newtestclass.cpp  newtestclass.h
CirclesFigureAreaMPI/: CMakeLists.txt  main.cpp  randomizer.cpp  randomizer.h  runtest.sh  solver.cpp  solver.h  types.h
CirclesFigureAreaMPI/nbproject/: Makefile-Debug.mk
CirclesFigureAreaMPI/tests/: newsimpletest1.cpp  newtestclass1.h
CirclesFigureAreaOMP/: CMakeLists.txt  main.cpp  randomizer.cpp  randomizer.h  solver.cpp  solver.h
CirclesFigureAreaOMP/nbproject/: Makefile-impl.mk  Package-Release.bash
CirclesFigureAreaOpenMP/: CMakeLists.txt  parser.cpp  parser.h  solver.cpp  solver.h  types.h
CirclesFigureAreaOpenMP/nbproject/: project.xml
CirclesFigureAreaPosix/: CMakeLists.txt  main.cpp  parser.cpp  runtests.sh  solver.cpp  solver.h  types.h
CirclesFigureAreaPosix/nbproject/: Makefile-variables.mk  configurations.xml
CirclesFigureAreaPosix/tests/: newsimpletest.cpp  newtestclass1.cpp  newtestrunner1.cpp
report/: main.aux  main.dvi  main.out  main.tex  main.toc  settings.tex  titlepage.tex
(+3 files in other folders)
